salvia_macro/tests/query_ui/fail/arg_wildcard.rs
#![allow(unused_imports)]

use salvia::{query, QueryContext};

#[query]
async fn f(_: i32, _cx: &QueryContext) {}

fn main() {}
